# nevresim

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml  codeql-analysis.yml  install gcc.yml
.vscode_reference/: _readme.txt  launch.json
include/: chip.hpp  chip_executor.hpp  chip_utilities.hpp  chip_weights.hpp  compute_policy_base.hpp  constants.hpp  core.hpp  demo.hpp  demo_menu.hpp  deterministic_spike_generator.hpp  input_loader.hpp  neuron.hpp  neuron_compute.hpp  real_valued_compute.hpp  spike_generator.hpp  spiking_compute.hpp  types.hpp  weights_loader.hpp
include/_tests/: all.hpp  multi_core.hpp  real_valued_multi_core.hpp  real_valued_single_core.hpp  single_core.hpp  spike_train_generator.hpp  test_util.hpp
include/_tests/xor_test/: xor_chip.hpp  xor_chip_weights.txt  xor_test.hpp
include/_tests/xor_test/xor_inputs/: xor_input_0.txt  xor_input_1.txt  xor_input_2.txt  xor_input_3.txt
include/common/: constants.hpp  types.hpp
include/loaders/: input_loader.hpp  mapping_loader.hpp  spike_train_input_loader.hpp  weights_loader.hpp
include/menu/: demo_menu.hpp
include/simulator/: chip_executor.hpp  chip_utilities.hpp  chip_weights.hpp
include/simulator/chip/: chip.hpp  core.hpp  neuron.hpp  runtime_chip.hpp
include/simulator/compute_policy/: compute_policy_base.hpp  neuron_compute.hpp  real_valued_compute.hpp  spiking_compute.hpp  ttfs_analytical_compute.hpp  ttfs_quantized_compute.hpp
include/simulator/compute_policy/compare_policy/: inclusive_compare.hpp  strict_compare.hpp
include/simulator/compute_policy/fire_policy/: default_fire.hpp  lif_fire_policy.hpp  novena_fire.hpp  ttfs_fire.hpp
include/simulator/compute_policy/neuron/: neuron_compute.hpp  real_valued_neuron_compute.hpp  spiking_neuron_compute.hpp  ttfs_analytical_neuron_compute.hpp  ttfs_quantized_neuron_compute.hpp
include/simulator/execution/: chip_executor.hpp  real_valued_execution.hpp  spiking_execution.hpp  ttfs_continuous_execution.hpp  ttfs_execution.hpp
include/simulator/spike_generation/: deterministic_spike_generator.hpp  front_loaded_spike_generator.hpp  spike_generator.hpp  spike_io_views.hpp  spike_train_spike_generator.hpp  stochastic_spike_generator.hpp  ttfs_spike_generator.hpp  uniform_spike_generator.hpp
include/tests/: all.hpp  multi_core.hpp  real_valued_multi_core.hpp  real_valued_single_core.hpp  single_core.hpp  test_util.hpp
src/: demo.cpp  demo_menu.cpp  main.cpp
(+2 files in other folders)
